--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Simple JS App</title>
   </head>
   <body>
+  	<ul class="pokemon-list"></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
