--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>Pokedex</h1>
     </header>
     <ul class="pokemon-list"></ul>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch.js"></script>
     <script src="js/scripts.js"></script>
      <footer>
       <div class="social">
