--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <title>Simple JS App</title>
   </head>
   <body>
-
     <header class="page-header">
-    <h1>Pokedex</h1>
+    <h1>POKEDEX</h1>
     </header>
     <ul class="pokemon-list"></ul>
+    <button id='show-modal'>Show modal</button>
+
+
+<div id='modal-container'>
+  <div class='modal'>
+    <button class='modal-close'>Close</button>
+    <h1>Modal title</h1>
+    <p>Modal text</p>       
+  </div>
+</div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/scripts.js"></script>
