--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <h1>POKEDEX</h1>
     </header>
     <ul class="pokemon-list"></ul>
-    <button id='show-modal'>Show modal</button>
 
 
 <div id='modal-container'>
@@ -21,6 +20,11 @@
     <p>Modal text</p>       
   </div>
 </div>
+    <script   
+    src="https://code.jquery.com/jquery-3.4.1.js"   
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="   
+    crossorigin="anonymous">
+    </script>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/scripts.js"></script>
